# 266-final-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
benign-ood-prompts/: README.md  download_benign_ood.py
benign-prompts/: README.md  cysecbench-dataset_generation.py  data_gen_output.csv  deduplicate_csv.py  defensive_dataset_gen.py  keywords.txt
input_data/: README.md  prompt_gen.py
notebooks/: Adversarial_Training_Set_Attacker.ipynb  Adversarial_Validator.ipynb  Holdout_Set_Evaluator.ipynb  LMSYS_Benign_Validator.ipynb  LatencyCalc.ipynb  LlamaGuard3.ipynb
training/: Guardrail_Model_Trainer.ipynb  Holdout_Set_Evaluator.ipynb  evaluate_false_negatives.py  evaluate_false_positives.py  evaluate_holdout_sets.py
training/guardrail_model_v1/: false_negative_analysis_with_prompts.json  false_positive_analysis_with_prompts.json  holdout_set_preambled_results.json
utilities/: README.md  combiner-attack.py  combiner-lmsys.py  combiner-v4.py  prompt_gen.py
